@@ -31,6 +31,8 @@
 
 #include <libgnome/gnome-config.h>
 
+#include <libgnome/gnome-gconf.h>
+
 #include <libgnome/gnome-triggers.h>
 #include <libgnome/gnome-sound.h>
 
